@@ -16,6 +16,9 @@ import static command_request.CommandRequestOuterClass.RequestType.BitOp;
 import static command_request.CommandRequestOuterClass.RequestType.BitPos;
 import static command_request.CommandRequestOuterClass.RequestType.ClientGetName;
 import static command_request.CommandRequestOuterClass.RequestType.ClientId;
+import static command_request.CommandRequestOuterClass.RequestType.ClientPause;
+import static command_request.CommandRequestOuterClass.RequestType.ClientTrackingInfo;
+import static command_request.CommandRequestOuterClass.RequestType.ClientUnpause;
 import static command_request.CommandRequestOuterClass.RequestType.ConfigGet;
 import static command_request.CommandRequestOuterClass.RequestType.ConfigResetStat;
 import static command_request.CommandRequestOuterClass.RequestType.ConfigRewrite;
@@ -33,6 +36,7 @@ import static command_request.CommandRequestOuterClass.RequestType.ExpireAt;
 import static command_request.CommandRequestOuterClass.RequestType.ExpireTime;
 import static command_request.CommandRequestOuterClass.RequestType.FCall;
 import static command_request.CommandRequestOuterClass.RequestType.FCallReadOnly;
+import static command_request.CommandRequestOuterClass.RequestType.FailOver;
 import static command_request.CommandRequestOuterClass.RequestType.FlushAll;
 import static command_request.CommandRequestOuterClass.RequestType.FlushDB;
 import static command_request.CommandRequestOuterClass.RequestType.FunctionDelete;
@@ -88,10 +92,18 @@ import static command_request.CommandRequestOuterClass.RequestType.LRem;
 import static command_request.CommandRequestOuterClass.RequestType.LSet;
 import static command_request.CommandRequestOuterClass.RequestType.LTrim;
 import static command_request.CommandRequestOuterClass.RequestType.LastSave;
+import static command_request.CommandRequestOuterClass.RequestType.LatencyHistory;
+import static command_request.CommandRequestOuterClass.RequestType.LatencyLatest;
+import static command_request.CommandRequestOuterClass.RequestType.LatencyReset;
 import static command_request.CommandRequestOuterClass.RequestType.Lolwut;
 import static command_request.CommandRequestOuterClass.RequestType.MGet;
 import static command_request.CommandRequestOuterClass.RequestType.MSet;
 import static command_request.CommandRequestOuterClass.RequestType.MSetNX;
+import static command_request.CommandRequestOuterClass.RequestType.MemoryDoctor;
+import static command_request.CommandRequestOuterClass.RequestType.MemoryMallocStats;
+import static command_request.CommandRequestOuterClass.RequestType.MemoryPurge;
+import static command_request.CommandRequestOuterClass.RequestType.MemoryStats;
+import static command_request.CommandRequestOuterClass.RequestType.Migrate;
 import static command_request.CommandRequestOuterClass.RequestType.Move;
 import static command_request.CommandRequestOuterClass.RequestType.ObjectEncoding;
 import static command_request.CommandRequestOuterClass.RequestType.ObjectFreq;
@@ -118,6 +130,7 @@ import static command_request.CommandRequestOuterClass.RequestType.RPushX;
 import static command_request.CommandRequestOuterClass.RequestType.RandomKey;
 import static command_request.CommandRequestOuterClass.RequestType.Rename;
 import static command_request.CommandRequestOuterClass.RequestType.RenameNX;
+import static command_request.CommandRequestOuterClass.RequestType.ReplicaOf;
 import static command_request.CommandRequestOuterClass.RequestType.Restore;
 import static command_request.CommandRequestOuterClass.RequestType.SAdd;
 import static command_request.CommandRequestOuterClass.RequestType.SCard;
@@ -284,6 +297,10 @@ import static glide.utils.ArrayTransformUtils.convertMapToValueKeyStringArray;
 import static glide.utils.ArrayTransformUtils.convertMapToValueKeyStringArrayBinary;
 import static glide.utils.ArrayTransformUtils.convertNestedArrayToKeyValueGlideStringArray;
 import static glide.utils.ArrayTransformUtils.convertNestedArrayToKeyValueStringArray;
+import static glide.utils.Java8Utils.createList;
+import static glide.utils.Java8Utils.createMap;
+import static glide.utils.Java8Utils.createSet;
+import static glide.utils.Java8Utils.repeat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -294,13 +311,17 @@ import command_request.CommandRequestOuterClass.RequestType;
 import glide.api.models.Batch;
 import glide.api.models.GlideString;
 import glide.api.models.Script;
+import glide.api.models.commands.ClientPauseMode;
 import glide.api.models.commands.ConditionalChange;
 import glide.api.models.commands.ExpireOptions;
+import glide.api.models.commands.FailoverOptions;
 import glide.api.models.commands.FlushMode;
 import glide.api.models.commands.GetExOptions;
 import glide.api.models.commands.InfoOptions.Section;
+import glide.api.models.commands.LInsertOptions.InsertPosition;
 import glide.api.models.commands.LPosOptions;
 import glide.api.models.commands.ListDirection;
+import glide.api.models.commands.MigrateOptions;
 import glide.api.models.commands.RangeOptions;
 import glide.api.models.commands.RangeOptions.InfLexBound;
 import glide.api.models.commands.RangeOptions.InfScoreBound;
@@ -371,6 +392,9 @@ import glide.api.models.commands.stream.StreamTrimOptions.MinId;
 import glide.managers.CommandManager;
 import glide.utils.ArgsBuilder;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -837,7 +861,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new String[] {"EX", "10"}),
@@ -860,7 +884,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptionsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new GlideString[] {gs("EX"), gs("10")}),
@@ -1730,7 +1754,7 @@ public class GlideClientTest {
         testResponse.complete(payload);
 
         // match on protobuf request
-        when(commandManager.submitScript(eq(script), eq(List.of()), eq(List.of()), any()))
+        when(commandManager.submitScript(eq(script), eq(createList()), eq(createList()), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -1759,8 +1783,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(createList(gs("key1"), gs("key2"))),
+                        eq(createList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -1795,8 +1819,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(createList(gs("key1"), gs("key2"))),
+                        eq(createList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -2019,6 +2043,61 @@ public class GlideClientTest {
         // verify
         assertEquals(testResponse, response);
         assertEquals(values, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void mget_binary_with_large_values_returns_null_for_missing_keys() {
+        // Test for large binary data with mget command
+
+        // Create 16KB of data to trigger DirectByteBuffer path
+        byte[] largeData = new byte[16 * 1024];
+        java.util.Arrays.fill(largeData, (byte) 0x00);
+
+        GlideString[] keys = {gs("key1"), gs("missing"), gs("key2")};
+        GlideString[] values = {gs("value1"), null, gs(largeData)};
+
+        CompletableFuture<GlideString[]> testResponse = new CompletableFuture<>();
+        testResponse.complete(values);
+
+        when(commandManager.<GlideString[]>submitNewCommand(eq(MGet), eq(keys), any()))
+                .thenReturn(testResponse);
+
+        CompletableFuture<GlideString[]> response = service.mget(keys);
+        GlideString[] payload = response.get();
+
+        assertEquals(testResponse, response);
+        assertEquals(3, payload.length);
+        assertEquals(gs("value1"), payload[0]);
+        assertNull(payload[1], "Missing key should return null, not GlideString('nil')");
+        assertArrayEquals(largeData, payload[2].getBytes());
+    }
+
+    @SneakyThrows
+    @Test
+    public void mget_string_with_large_values_returns_null_for_missing_keys() {
+        // String version should also handle null correctly with large data
+
+        // Create 16KB string to trigger DirectByteBuffer path
+        String largeString = repeat("x", 16 * 1024);
+
+        String[] keys = {"key1", "missing", "key2"};
+        String[] values = {"value1", null, largeString};
+
+        CompletableFuture<String[]> testResponse = new CompletableFuture<>();
+        testResponse.complete(values);
+
+        when(commandManager.<String[]>submitNewCommand(eq(MGet), eq(keys), any()))
+                .thenReturn(testResponse);
+
+        CompletableFuture<String[]> response = service.mget(keys);
+        String[] payload = response.get();
+
+        assertEquals(testResponse, response);
+        assertEquals(3, payload.length);
+        assertEquals("value1", payload[0]);
+        assertNull(payload[1], "Missing key should return null");
+        assertEquals(largeString, payload[2]);
     }
 
     @SneakyThrows
@@ -4032,7 +4111,7 @@ public class GlideClientTest {
     public void smembers_returns_success() {
         // setup
         String key = "testKey";
-        Set<String> value = Set.of("testMember");
+        Set<String> value = createSet("testMember");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4101,7 +4180,7 @@ public class GlideClientTest {
     public void sdiff_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4124,7 +4203,7 @@ public class GlideClientTest {
     public void sdiff_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4299,7 +4378,7 @@ public class GlideClientTest {
     public void sinter_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4322,7 +4401,7 @@ public class GlideClientTest {
     public void sinter_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4732,7 +4811,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4757,7 +4836,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4783,7 +4862,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4809,7 +4888,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4835,7 +4914,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4862,7 +4941,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4890,7 +4969,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4921,7 +5000,7 @@ public class GlideClientTest {
         GlideString[] arguments = {
             gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")
         };
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4981,6 +5060,111 @@ public class GlideClientTest {
 
     @SneakyThrows
     @Test
+    public void clientPause_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        // match on protobuf request
+        when(commandManager.<String>submitNewCommand(eq(ClientPause), eq(new String[] {"1000"}), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.clientPause(1000);
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void clientPause_with_write_mode_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        // match on protobuf request
+        when(commandManager.<String>submitNewCommand(
+                        eq(ClientPause), eq(new String[] {"1000", "WRITE"}), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.clientPause(1000, ClientPauseMode.WRITE);
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void clientPause_with_all_mode_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        // match on protobuf request
+        when(commandManager.<String>submitNewCommand(
+                        eq(ClientPause), eq(new String[] {"1000", "ALL"}), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.clientPause(1000, ClientPauseMode.ALL);
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void clientUnpause_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        // match on protobuf request
+        when(commandManager.<String>submitNewCommand(eq(ClientUnpause), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.clientUnpause();
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void clientTrackingInfo_returns_success() {
+        // setup
+        Map<String, Object> info = new LinkedHashMap<>();
+        info.put("flags", new HashSet<>(Collections.singletonList("off")));
+        info.put("redirect", -1L);
+        info.put("prefixes", new Object[0]);
+        CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
+        testResponse.complete(info);
+
+        // match on protobuf request
+        when(commandManager.<Map<String, Object>>submitNewCommand(
+                        eq(ClientTrackingInfo), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Map<String, Object>> response = service.clientTrackingInfo();
+
+        // verify
+        assertEquals(testResponse, response);
+    }
+
+    @SneakyThrows
+    @Test
     public void configRewrite_returns_success() {
         // setup
         CompletableFuture<String> testResponse = new CompletableFuture<>();
@@ -5023,7 +5207,7 @@ public class GlideClientTest {
     @Test
     public void configGet_returns_success() {
         // setup
-        Map<String, String> testPayload = Map.of("timeout", "1000");
+        Map<String, String> testPayload = createMap("timeout", "1000");
         CompletableFuture<Map<String, String>> testResponse = new CompletableFuture<>();
         testResponse.complete(testPayload);
 
@@ -5054,7 +5238,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<String> response = service.configSet(Map.of("timeout", "1000"));
+        CompletableFuture<String> response = service.configSet(createMap("timeout", "1000"));
 
         // verify
         assertEquals(testResponse, response);
@@ -5165,7 +5349,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Map.of("member1", 2.5);
+        Map<String, Double> value = createMap("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5189,7 +5373,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5215,7 +5399,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = Map.of("member1", 2.0, "member2", 3.0);
+        Map<String, Double> value = createMap("member1", 2.0, "member2", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5240,7 +5424,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.0, gs("member2"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.0, gs("member2"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5315,7 +5499,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Map.of("member1", 2.5);
+        Map<String, Double> value = createMap("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5339,7 +5523,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5415,7 +5599,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = Map.of("member1", 3.0, "member2", 1.0);
+        Map<String, Double> value = createMap("member1", 3.0, "member2", 1.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5440,7 +5624,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 3.0, gs("member2"), 1.0);
+        Map<GlideString, Double> value = createMap(gs("member1"), 3.0, gs("member2"), 1.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5677,7 +5861,7 @@ public class GlideClientTest {
         RangeByIndex rangeByIndex = new RangeByIndex(0, 4);
         String[] arguments =
                 new String[] {key, rangeByIndex.getStart(), rangeByIndex.getEnd(), WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = Map.of("one", 1.0, "two", 2.0, "three", 3.0);
+        Map<String, Double> value = createMap("one", 1.0, "two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5705,7 +5889,7 @@ public class GlideClientTest {
                 new GlideString[] {
                     key, gs(rangeByIndex.getStart()), gs(rangeByIndex.getEnd()), gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = Map.of(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5746,7 +5930,7 @@ public class GlideClientTest {
                     "2",
                     WITH_SCORES_VALKEY_API
                 };
-        Map<String, Double> value = Map.of("two", 2.0, "three", 3.0);
+        Map<String, Double> value = createMap("two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5786,7 +5970,7 @@ public class GlideClientTest {
                     gs("2"),
                     gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = Map.of(gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6116,7 +6300,7 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {"2", key1, key2, WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = Map.of("element1", 2.0);
+        Map<String, Double> value = createMap("element1", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6142,7 +6326,7 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {gs("2"), key1, key2, gs(WITH_SCORES_VALKEY_API)};
-        Map<GlideString, Double> value = Map.of(gs("element1"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("element1"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6775,7 +6959,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6801,7 +6985,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6832,7 +7016,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6866,7 +7050,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6944,7 +7128,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6970,7 +7154,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7001,7 +7185,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7035,7 +7219,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7638,7 +7822,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamAddOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // no TRIM option
                         "test_xadd_no_trim",
@@ -7849,7 +8033,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen", new MaxLen(5L), new String[] {TRIM_MAXLEN_VALKEY_API, "5"}),
@@ -7883,7 +8067,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptionsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen",
@@ -7977,8 +8161,8 @@ public class GlideClientTest {
         String streamIdTwo = "id-two";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         String[] arguments = {READ_STREAMS_VALKEY_API, keyOne, keyTwo, streamIdOne, streamIdTwo};
 
         CompletableFuture<Map<String, Map<String, String[][]>>> testResponse =
@@ -8012,8 +8196,8 @@ public class GlideClientTest {
         GlideString streamIdTwo = gs("id-two");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_STREAMS_VALKEY_API), keyOne, keyTwo, streamIdOne, streamIdTwo
         };
@@ -8050,7 +8234,7 @@ public class GlideClientTest {
         Long count = 10L;
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         String[] arguments = {
             READ_COUNT_VALKEY_API,
             count.toString(),
@@ -8073,7 +8257,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xread(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<String, Map<String, String[][]>> payload = response.get();
 
@@ -8092,7 +8276,7 @@ public class GlideClientTest {
         Long count = 10L;
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_COUNT_VALKEY_API),
             gs(count.toString()),
@@ -8115,7 +8299,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadBinary(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<GlideString, Map<GlideString, GlideString[][]>> payload = response.get();
 
@@ -8182,7 +8366,7 @@ public class GlideClientTest {
         StreamRange start = IdBound.of(9999L);
         StreamRange end = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8211,7 +8395,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8239,7 +8424,7 @@ public class GlideClientTest {
         StreamRange end = InfRangeBound.MAX;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8278,7 +8463,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8315,7 +8501,7 @@ public class GlideClientTest {
         StreamRange end = IdBound.of(9999L);
         StreamRange start = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8344,7 +8530,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8373,7 +8560,7 @@ public class GlideClientTest {
         StreamRange start = InfRangeBound.MIN;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8412,7 +8599,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8837,8 +9025,8 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -8884,8 +9072,8 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -8931,7 +9119,7 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -8958,7 +9146,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xreadgroup(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -8981,7 +9169,7 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -9008,7 +9196,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadgroup(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -9055,7 +9243,7 @@ public class GlideClientTest {
         Long minIdleTime = 18L;
         String[] ids = new String[] {"testId"};
         String[] arguments = concatenateArrays(new String[] {key, groupName, consumer, "18"}, ids);
-        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = createMap("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9086,7 +9274,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 concatenateArrays(new GlideString[] {key, groupName, consumer, gs("18")}, ids);
         Map<GlideString, GlideString[][]> mockResult =
-                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                createMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9132,7 +9320,7 @@ public class GlideClientTest {
                     "5",
                     FORCE_VALKEY_API
                 };
-        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = createMap("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9178,7 +9366,7 @@ public class GlideClientTest {
                     gs(FORCE_VALKEY_API)
                 };
         Map<GlideString, GlideString[][]> mockResult =
-                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                createMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9363,7 +9551,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9400,7 +9588,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9437,7 +9626,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9477,7 +9666,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9516,7 +9706,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9554,7 +9744,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9592,7 +9783,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9641,7 +9832,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -10303,7 +10495,7 @@ public class GlideClientTest {
     public void linsert_returns_success() {
         // setup
         String key = "testKey";
-        var position = BEFORE;
+        InsertPosition position = BEFORE;
         String pivot = "pivot";
         String elem = "elem";
         String[] arguments = new String[] {key, position.toString(), pivot, elem};
@@ -10330,7 +10522,7 @@ public class GlideClientTest {
     public void linsert_binary_returns_success() {
         // setup
         GlideString key = gs("testKey");
-        var position = BEFORE;
+        InsertPosition position = BEFORE;
         GlideString pivot = gs("pivot");
         GlideString elem = gs("elem");
         GlideString[] arguments = new GlideString[] {key, gs(position.toString()), pivot, elem};
@@ -11781,7 +11973,7 @@ public class GlideClientTest {
         // setup
         String[] args = new String[0];
         Map<String, Map<String, Map<String, Object>>> value =
-                Map.of("::1", Map.of("1", Map.of("2", 2)));
+                createMap("::1", createMap("1", createMap("2", 2)));
         CompletableFuture<Map<String, Map<String, Map<String, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -11807,7 +11999,7 @@ public class GlideClientTest {
         // setup
         GlideString[] args = new GlideString[0];
         Map<String, Map<GlideString, Map<GlideString, Object>>> value =
-                Map.of("::1", Map.of(gs("1"), Map.of(gs("2"), 2)));
+                createMap("::1", createMap(gs("1"), createMap(gs("2"), 2)));
         CompletableFuture<Map<String, Map<GlideString, Map<GlideString, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -12131,7 +12323,7 @@ public class GlideClientTest {
         double timeout = 0.1;
         String[] arguments =
                 new String[] {Double.toString(timeout), "2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12164,7 +12356,8 @@ public class GlideClientTest {
                 new GlideString[] {
                     gs(Double.toString(timeout)), gs("2"), key, key2, gs(listDirection.toString())
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12204,7 +12397,7 @@ public class GlideClientTest {
                     COUNT_FOR_LIST_VALKEY_API,
                     Long.toString(count)
                 };
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12244,7 +12437,8 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12511,7 +12705,7 @@ public class GlideClientTest {
         String[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         String[] arguments = new String[] {"2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12538,7 +12732,8 @@ public class GlideClientTest {
         GlideString[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         GlideString[] arguments = new GlideString[] {gs("2"), key, key2, gs(listDirection.toString())};
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12571,7 +12766,7 @@ public class GlideClientTest {
                 new String[] {
                     "2", key, key2, listDirection.toString(), COUNT_FOR_LIST_VALKEY_API, Long.toString(count)
                 };
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12607,7 +12802,8 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13039,7 +13235,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Set<String> value = Set.of("one", "two");
+        Set<String> value = createSet("one", "two");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13064,7 +13260,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Set<GlideString> value = Set.of(gs("one"), gs("two"));
+        Set<GlideString> value = createSet(gs("one"), gs("two"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13518,7 +13714,8 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING};
-        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13543,7 +13740,8 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING)};
-        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13565,7 +13763,8 @@ public class GlideClientTest {
     @Test
     public void lcsIdx_throws_NullPointerException() {
         // setup
-        Map<String, Object> value = Map.of("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         // exception
         RuntimeException runtimeException =
@@ -13585,7 +13784,7 @@ public class GlideClientTest {
         String[] arguments =
                 new String[] {key1, key2, IDX_COMMAND_STRING, MINMATCHLEN_COMMAND_STRING, "2"};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13618,7 +13817,7 @@ public class GlideClientTest {
                     key1, key2, gs(IDX_COMMAND_STRING), gs(MINMATCHLEN_COMMAND_STRING), gs("2")
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13648,7 +13847,7 @@ public class GlideClientTest {
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING, WITHMATCHLEN_COMMAND_STRING};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13679,7 +13878,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING), gs(WITHMATCHLEN_COMMAND_STRING)};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13717,7 +13916,7 @@ public class GlideClientTest {
                     WITHMATCHLEN_COMMAND_STRING
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13755,7 +13954,7 @@ public class GlideClientTest {
                     gs(WITHMATCHLEN_COMMAND_STRING)
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13989,7 +14188,7 @@ public class GlideClientTest {
     public void pubsubNumSub_returns_success() {
         // setup
         String[] arguments = new String[] {"ch1", "ch2"};
-        Map<String, Long> value = Map.of();
+        Map<String, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<String, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14012,7 +14211,7 @@ public class GlideClientTest {
     public void pubsubNumSubBinary_returns_success() {
         // setup
         GlideString[] arguments = new GlideString[] {gs("ch1"), gs("ch2")};
-        Map<GlideString, Long> value = Map.of();
+        Map<GlideString, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<GlideString, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14036,7 +14235,7 @@ public class GlideClientTest {
     public void sunion_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14058,7 +14257,7 @@ public class GlideClientTest {
     public void sunion_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14926,7 +15125,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -14992,7 +15191,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15123,7 +15322,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15188,7 +15387,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15315,7 +15514,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15390,7 +15589,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15526,7 +15725,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15568,7 +15767,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15682,7 +15881,7 @@ public class GlideClientTest {
         String[] arguments = {key};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             "name",
                             "groupName",
                             "consumers",
@@ -15722,7 +15921,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             gs("name"),
                             gs("groupName"),
                             gs("consumers"),
@@ -15763,7 +15962,7 @@ public class GlideClientTest {
         String[] arguments = {key, groupName};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    Map.of("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
+                    createMap("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
                 };
 
         CompletableFuture<Map<String, Object>[]> testResponse = new CompletableFuture<>();
@@ -15792,7 +15991,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key, groupName};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             gs("name"),
                             gs("groupName"),
                             gs("pending"),
@@ -15826,7 +16025,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15851,7 +16050,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key, FULL};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15877,7 +16076,7 @@ public class GlideClientTest {
         String key = "testKey";
         int count = 42;
         String[] arguments = {key, FULL, COUNT, "42"};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15902,7 +16101,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15927,7 +16126,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key, gs(FULL)};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15953,7 +16152,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         int count = 42;
         GlideString[] arguments = {key, gs(FULL), gs(COUNT), gs("42")};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -16093,7 +16292,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.subscribe(Set.of("channel1", "channel2"), 5000);
+        CompletableFuture<Void> response = service.subscribe(createSet("channel1", "channel2"), 5000);
 
         // verify
         assertNull(response.get());
@@ -16101,7 +16300,7 @@ public class GlideClientTest {
 
     @SneakyThrows
     @Test
-    public void unsubscribe_returns_success() {
+    public void unsubscribe_blocking_returns_success() {
         // setup
         CompletableFuture<Void> testResponse = new CompletableFuture<>();
         testResponse.complete(null);
@@ -16111,7 +16310,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.unsubscribe(Set.of("channel1"), 1000);
+        CompletableFuture<Void> response = service.unsubscribe(createSet("channel1"), 1000);
 
         // verify
         assertNull(response.get());
@@ -16129,7 +16328,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.psubscribe(Set.of("pattern*"), 3000);
+        CompletableFuture<Void> response = service.psubscribe(createSet("pattern*"), 3000);
 
         // verify
         assertNull(response.get());
@@ -16137,7 +16336,7 @@ public class GlideClientTest {
 
     @SneakyThrows
     @Test
-    public void punsubscribe_returns_success() {
+    public void punsubscribe_blocking_returns_success() {
         // setup
         CompletableFuture<Void> testResponse = new CompletableFuture<>();
         testResponse.complete(null);
@@ -16148,9 +16347,366 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.punsubscribe(Set.of("pattern*"), 2000);
+        CompletableFuture<Void> response = service.punsubscribe(createSet("pattern*"), 2000);
 
         // verify
         assertNull(response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void unsubscribe_lazy_returns_success() {
+        // setup
+        CompletableFuture<Void> testResponse = new CompletableFuture<>();
+        testResponse.complete(null);
+
+        // match on protobuf request
+        when(commandManager.<Void>submitNewCommand(
+                        eq(command_request.CommandRequestOuterClass.RequestType.Unsubscribe),
+                        any(String[].class),
+                        any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Void> response = service.unsubscribeLazy(createSet("channel1"));
+
+        // verify
+        assertNull(response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void punsubscribe_lazy_returns_success() {
+        // setup
+        CompletableFuture<Void> testResponse = new CompletableFuture<>();
+        testResponse.complete(null);
+
+        // match on protobuf request
+        when(commandManager.<Void>submitNewCommand(
+                        eq(command_request.CommandRequestOuterClass.RequestType.PUnsubscribe),
+                        any(String[].class),
+                        any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Void> response = service.punsubscribeLazy(createSet("pattern*"));
+
+        // verify
+        assertNull(response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void failover_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        when(commandManager.<String>submitNewCommand(eq(FailOver), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.failover();
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @Test
+    public void migrate_keys_throws_on_invalid_keys() {
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> service.migrate("host", 6379L, new String[0], 0L, 5000L));
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> service.migrate("host", 6379L, (String[]) null, 0L, 5000L));
+        assertThrows(
+                IllegalArgumentException.class,
+                () -> service.migrate("host", 6379L, (GlideString[]) null, 0L, 5000L));
+    }
+
+    @SneakyThrows
+    @Test
+    public void failover_with_options_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        when(commandManager.<String>submitNewCommand(
+                        eq(FailOver),
+                        eq(new String[] {"TO", "localhost", "6380", "FORCE", "TIMEOUT", "1000"}),
+                        any()))
+                .thenReturn(testResponse);
+        FailoverOptions options = FailoverOptions.forced("localhost", 6380, 1000);
+        CompletableFuture<String> response = service.failover(options);
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void migrate_keys_with_options() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+        when(commandManager.<String>submitNewCommand(
+                        eq(Migrate),
+                        eq(
+                                new GlideString[] {
+                                    gs("host"),
+                                    gs("6379"),
+                                    gs(""),
+                                    gs("0"),
+                                    gs("5000"),
+                                    gs(MigrateOptions.REPLACE_VALKEY_API),
+                                    gs(MigrateOptions.KEYS_VALKEY_API),
+                                    gs("key1"),
+                                    gs("key2")
+                                }),
+                        any()))
+                .thenReturn(testResponse);
+        // exercise
+        CompletableFuture<String> response =
+                service.migrate(
+                        "host",
+                        6379L,
+                        new String[] {"key1", "key2"},
+                        0L,
+                        5000L,
+                        MigrateOptions.builder().replace(true).build());
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void failover_abort_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        when(commandManager.<String>submitNewCommand(eq(FailOver), eq(new String[] {"ABORT"}), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.failover(FailoverOptions.abort());
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void replicaof_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        when(commandManager.<String>submitNewCommand(
+                        eq(ReplicaOf), eq(new String[] {"localhost", "6379"}), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.replicaof("localhost", 6379);
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void replicaofNoOne_returns_success() {
+        // setup
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(OK);
+
+        when(commandManager.<String>submitNewCommand(
+                        eq(ReplicaOf), eq(new String[] {"NO", "ONE"}), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.replicaofNoOne();
+        String payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(OK, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void latencyHistory_returns_success() {
+        // setup
+        Object[][] value = new Object[][] {new Object[] {1709062230L, 50L}};
+        CompletableFuture<Object[][]> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<Object[][]>submitNewCommand(
+                        eq(LatencyHistory), eq(new String[] {"command"}), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Object[][]> response = service.latencyHistory("command");
+        Object[][] payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void latencyLatest_returns_success() {
+        // setup
+        Object[][] value = new Object[][] {new Object[] {"command", 1709062230L, 50L, 100L, 150L, 2L}};
+        CompletableFuture<Object[][]> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<Object[][]>submitNewCommand(eq(LatencyLatest), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Object[][]> response = service.latencyLatest();
+        Object[][] payload = response.get();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, payload);
+    }
+
+    @SneakyThrows
+    @Test
+    public void latencyReset_returns_success() {
+        // setup
+        Long value = 2L;
+        CompletableFuture<Long> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<Long>submitNewCommand(eq(LatencyReset), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Long> response = service.latencyReset();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void latencyReset_with_events_returns_success() {
+        // setup
+        String[] events = new String[] {"command"};
+        Long value = 1L;
+        CompletableFuture<Long> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<Long>submitNewCommand(eq(LatencyReset), eq(events), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Long> response = service.latencyReset(events);
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, response.get());
+    }
+
+    // TODO #6166: Memory command declarations will move to a shared base interface.
+    @SneakyThrows
+    @Test
+    public void memoryDoctor_returns_success() {
+        // setup
+        String value = "No memory issues detected";
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<String>submitNewCommand(eq(MemoryDoctor), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.memoryDoctor();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void memoryMallocStats_returns_success() {
+        // setup
+        String value = "jemalloc stats";
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<String>submitNewCommand(eq(MemoryMallocStats), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.memoryMallocStats();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void memoryPurge_returns_success() {
+        // setup
+        String value = OK;
+        CompletableFuture<String> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<String>submitNewCommand(eq(MemoryPurge), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<String> response = service.memoryPurge();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, response.get());
+    }
+
+    @SneakyThrows
+    @Test
+    public void memoryStats_returns_success() {
+        // setup
+        Map<String, Object> value = createMap("peak.allocated", 1024L, "total.allocated", 512L);
+        CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
+        testResponse.complete(value);
+
+        // match on protobuf request
+        when(commandManager.<Map<String, Object>>submitNewCommand(
+                        eq(MemoryStats), eq(new String[0]), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Map<String, Object>> response = service.memoryStats();
+
+        // verify
+        assertEquals(testResponse, response);
+        assertEquals(value, response.get());
     }
 }
