@@ -5,18 +5,19 @@ import static glide.TestConfiguration.SERVER_VERSION;
 import static glide.TestUtilities.assertDeepEquals;
 import static glide.TestUtilities.commonClusterClientConfig;
 import static glide.TestUtilities.concatenateArrays;
+import static glide.TestUtilities.createClientWithRetry;
 import static glide.TestUtilities.generateLuaLibCode;
 import static glide.api.BaseClient.OK;
 import static glide.api.models.GlideString.gs;
 import static glide.api.models.commands.SortBaseOptions.OrderBy.DESC;
 import static glide.api.models.configuration.RequestRoutingConfiguration.SimpleMultiNodeRoute.ALL_PRIMARIES;
 import static glide.api.models.configuration.RequestRoutingConfiguration.SimpleSingleNodeRoute.RANDOM;
+import static glide.utils.Java8Utils.createMap;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
-import static org.junit.jupiter.api.Named.named;
 
 import glide.BatchTestUtilities.BatchBuilder;
 import glide.api.GlideClusterClient;
@@ -32,11 +33,17 @@ import glide.api.models.configuration.RequestRoutingConfiguration.SlotIdRoute;
 import glide.api.models.configuration.RequestRoutingConfiguration.SlotType;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
-import java.util.Map;
+import java.util.List;
 import java.util.UUID;
 import java.util.stream.Stream;
 import lombok.SneakyThrows;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -45,27 +52,46 @@ import org.junit.jupiter.params.provider.MethodSource;
 @Timeout(10) // seconds
 public class ClusterBatchTests {
 
+    private static final List<Arguments> clients = new ArrayList<>();
+
+    // Client setup runs once before the whole parameterized suite. Under heavy CI load the initial
+    // connect can fail transiently, so use the shared bounded-retry helper (see its javadoc for why
+    // Glide's native reconnect strategy is not sufficient here). See issue #5343.
+    @BeforeAll
     @SneakyThrows
+    public static void init() {
+        clients.add(Arguments.of(Named.of("RESP2", connectWithRetry(ProtocolVersion.RESP2))));
+        clients.add(Arguments.of(Named.of("RESP3", connectWithRetry(ProtocolVersion.RESP3))));
+    }
+
+    private static GlideClusterClient connectWithRetry(ProtocolVersion protocol) {
+        return createClientWithRetry(
+                () ->
+                        GlideClusterClient.createClient(
+                                commonClusterClientConfig().requestTimeout(7000).protocol(protocol).build()));
+    }
+
+    @AfterAll
+    @SneakyThrows
+    @SuppressWarnings("unchecked")
+    public static void teardown() {
+        for (Arguments client : clients) {
+            ((Named<GlideClusterClient>) client.get()[0]).getPayload().close();
+        }
+    }
+
+    @AfterEach
+    @SneakyThrows
+    @SuppressWarnings("unchecked")
+    public void cleanup() {
+        // Flush all databases to ensure clean state between tests
+        for (Arguments client : clients) {
+            ((Named<GlideClusterClient>) client.get()[0]).getPayload().flushall().get();
+        }
+    }
+
     public static Stream<Arguments> getClients() {
-        return Stream.of(
-                Arguments.of(
-                        named(
-                                "RESP2",
-                                GlideClusterClient.createClient(
-                                                commonClusterClientConfig()
-                                                        .requestTimeout(7000)
-                                                        .protocol(ProtocolVersion.RESP2)
-                                                        .build())
-                                        .get())),
-                Arguments.of(
-                        named(
-                                "RESP3",
-                                GlideClusterClient.createClient(
-                                                commonClusterClientConfig()
-                                                        .requestTimeout(7000)
-                                                        .protocol(ProtocolVersion.RESP3)
-                                                        .build())
-                                        .get())));
+        return clients.stream();
     }
 
     @SneakyThrows
@@ -75,7 +101,7 @@ public class ClusterBatchTests {
                         args -> Stream.of(true, false).map(isAtomic -> Arguments.of(args.get()[0], isAtomic)));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void custom_command_info(GlideClusterClient clusterClient) {
@@ -84,7 +110,7 @@ public class ClusterBatchTests {
         assertTrue(((String) result[0]).contains("# Stats"));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void custom_command_info(GlideClusterClient clusterClient, boolean isAtomic) {
@@ -93,7 +119,7 @@ public class ClusterBatchTests {
         assertEquals(result[0], "PONG");
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void info_simple_route_test(GlideClusterClient clusterClient, boolean isAtomic) {
@@ -172,7 +198,7 @@ public class ClusterBatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void test_batch_large_values(GlideClusterClient clusterClient, boolean isAtomic) {
         // Skip on macOS - the macOS tests run on self hosted VMs which have resource limits
@@ -183,8 +209,8 @@ public class ClusterBatchTests {
             return;
         }
         int length = 1 << 25; // 33mb
-        String key = "0".repeat(length);
-        String value = "0".repeat(length);
+        String key = new String(new char[length]).replace("\\0", "0");
+        String value = new String(new char[length]).replace("\\0", "0");
 
         ClusterBatch batch = new ClusterBatch(isAtomic);
         batch.set(key, value);
@@ -200,16 +226,16 @@ public class ClusterBatchTests {
         assertArrayEquals(expectedResult, result);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void lastsave(GlideClusterClient clusterClient, boolean isAtomic) {
-        var yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
-        var response = clusterClient.exec(new ClusterBatch(isAtomic).lastsave(), true).get();
+        Instant yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
+        Object[] response = clusterClient.exec(new ClusterBatch(isAtomic).lastsave(), true).get();
         assertTrue(Instant.ofEpochSecond((long) response[0]).isAfter(yesterday));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void objectFreq(GlideClusterClient clusterClient, boolean isAtomic) {
@@ -219,19 +245,19 @@ public class ClusterBatchTests {
                 clusterClient.configGet(new String[] {maxmemoryPolicy}).get().get(maxmemoryPolicy);
         try {
             ClusterBatch batch = new ClusterBatch(isAtomic);
-            batch.configSet(Map.of(maxmemoryPolicy, "allkeys-lfu"));
+            batch.configSet(Collections.singletonMap(maxmemoryPolicy, "allkeys-lfu"));
             batch.set(objectFreqKey, "");
             batch.objectFreq(objectFreqKey);
-            var response = clusterClient.exec(batch, true).get();
+            Object[] response = clusterClient.exec(batch, true).get();
             assertEquals(OK, response[0]);
             assertEquals(OK, response[1]);
             assertTrue((long) response[2] >= 0L);
         } finally {
-            clusterClient.configSet(Map.of(maxmemoryPolicy, oldPolicy));
+            clusterClient.configSet(Collections.singletonMap(maxmemoryPolicy, oldPolicy));
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void objectIdletime(GlideClusterClient clusterClient, boolean isAtomic) {
@@ -239,12 +265,12 @@ public class ClusterBatchTests {
         ClusterBatch batch = new ClusterBatch(isAtomic);
         batch.set(objectIdletimeKey, "");
         batch.objectIdletime(objectIdletimeKey);
-        var response = clusterClient.exec(batch, true).get();
+        Object[] response = clusterClient.exec(batch, true).get();
         assertEquals(OK, response[0]);
         assertTrue((long) response[1] >= 0L);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void objectRefcount(GlideClusterClient clusterClient, boolean isAtomic) {
@@ -252,19 +278,19 @@ public class ClusterBatchTests {
         ClusterBatch batch = new ClusterBatch(isAtomic);
         batch.set(objectRefcountKey, "");
         batch.objectRefcount(objectRefcountKey);
-        var response = clusterClient.exec(batch, true).get();
+        Object[] response = clusterClient.exec(batch, true).get();
         assertEquals(OK, response[0]);
         assertTrue((long) response[1] >= 0L);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void zrank_zrevrank_withscores(GlideClusterClient clusterClient) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.2.0"));
         String zSetKey1 = "{key}:zsetKey1-" + UUID.randomUUID();
         ClusterBatch batch = new ClusterBatch(true);
-        batch.zadd(zSetKey1, Map.of("one", 1.0, "two", 2.0, "three", 3.0));
+        batch.zadd(zSetKey1, createMap("one", 1.0, "two", 2.0, "three", 3.0));
         batch.zrankWithScore(zSetKey1, "one");
         batch.zrevrankWithScore(zSetKey1, "one");
 
@@ -274,7 +300,7 @@ public class ClusterBatchTests {
         assertArrayEquals(new Object[] {2L, 1.0}, (Object[]) result[2]);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void watch(GlideClusterClient clusterClient) {
@@ -331,7 +357,7 @@ public class ClusterBatchTests {
         // assertInstanceOf(RequestException.class, executionException.getCause());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void unwatch(GlideClusterClient clusterClient) {
@@ -357,7 +383,7 @@ public class ClusterBatchTests {
         assertEquals(foobarString, clusterClient.get(key2).get());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void spublish(GlideClusterClient clusterClient, boolean isAtomic) {
@@ -367,11 +393,11 @@ public class ClusterBatchTests {
         assertArrayEquals(new Object[] {0L}, clusterClient.exec(batch, true).get());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void sort(GlideClusterClient clusterClient, boolean isAtomic) {
-        var prefix = "{" + UUID.randomUUID() + "}:";
+        String prefix = "{" + UUID.randomUUID() + "}:";
         String key1 = prefix + "1";
         String key2 = prefix + "2";
         String key3 = prefix + "3";
@@ -394,8 +420,8 @@ public class ClusterBatchTests {
 
         if (SERVER_VERSION.isGreaterThanOrEqualTo("8.0.0")) {
             batch
-                    .hset(key3, Map.of("name", "Alice", "age", "30"))
-                    .hset(key4, Map.of("name", "Bob", "age", "25"))
+                    .hset(key3, createMap("name", "Alice", "age", "30"))
+                    .hset(key4, createMap("name", "Bob", "age", "25"))
                     .lpush(key5, new String[] {"4", "3"})
                     .sort(
                             key5,
@@ -450,8 +476,8 @@ public class ClusterBatchTests {
                     concatenateArrays(
                             expectedResult,
                             new Object[] {
-                                2L, // hset(key3, Map.of("name", "Alice", "age", "30"))
-                                2L, // hset(key4, Map.of("name", "Bob", "age", "25"))
+                                2L, // hset(key3, createMap("name", "Alice", "age", "30"))
+                                2L, // hset(key4, createMap("name", "Bob", "age", "25"))
                                 2L, // lpush(key5, new String[] {"4", "3"})
                                 ascendingListByAge, // sort(key5, SortOptions)
                                 descendingListByAge, // sort(key5, SortOptions)
@@ -466,7 +492,7 @@ public class ClusterBatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void waitTest(GlideClusterClient clusterClient, boolean isAtomic) {
         // setup
@@ -486,14 +512,15 @@ public class ClusterBatchTests {
         assertTrue((Long) expectedResult[1] <= (Long) results[1]);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void test_batch_function_dump_restore(GlideClusterClient clusterClient, boolean isAtomic) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.0.0"));
         String libName = "mylib";
         String funcName = "myfun";
-        String code = generateLuaLibCode(libName, Map.of(funcName, "return args[1]"), true);
+        String code =
+                generateLuaLibCode(libName, Collections.singletonMap(funcName, "return args[1]"), true);
 
         // Setup
         clusterClient.functionLoad(code, true).get();
@@ -516,14 +543,14 @@ public class ClusterBatchTests {
         assertEquals(OK, response[0]);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     @SneakyThrows
     public void test_batch_xinfoStream(GlideClusterClient clusterClient, boolean isAtomic) {
         ClusterBatch batch = new ClusterBatch(isAtomic);
         final String streamKey = "{streamKey}-" + UUID.randomUUID();
         LinkedHashMap<String, Object> expectedStreamInfo =
-                new LinkedHashMap<>() {
+                new LinkedHashMap<String, Object>() {
                     {
                         put("radix-tree-keys", 1L);
                         put("radix-tree-nodes", 2L);
@@ -535,7 +562,7 @@ public class ClusterBatchTests {
                     }
                 };
         LinkedHashMap<String, Object> expectedStreamFullInfo =
-                new LinkedHashMap<>() {
+                new LinkedHashMap<String, Object>() {
                     {
                         put("radix-tree-keys", 1L);
                         put("radix-tree-nodes", 2L);
@@ -547,7 +574,10 @@ public class ClusterBatchTests {
                 };
 
         batch
-                .xadd(streamKey, Map.of("field1", "value1"), StreamAddOptions.builder().id("0-1").build())
+                .xadd(
+                        streamKey,
+                        Collections.singletonMap("field1", "value1"),
+                        StreamAddOptions.builder().id("0-1").build())
                 .xinfoStream(streamKey)
                 .xinfoStreamFull(streamKey);
 
@@ -564,7 +594,8 @@ public class ClusterBatchTests {
 
         assertDeepEquals(
                 new Object[] {
-                    "0-1", // xadd(streamKey, Map.of("field1", "value1"), ... .id("0-1").build());
+                    "0-1", // xadd(streamKey, Collections.singletonMap("field1", "value1"), ...
+                    // .id("0-1").build());
                     expectedStreamInfo, // xinfoStream(streamKey)
                     expectedStreamFullInfo, // xinfoStreamFull(streamKey)
                 },
@@ -572,17 +603,18 @@ public class ClusterBatchTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClientsWithAtomic")
     public void binary_strings(GlideClusterClient clusterClient, boolean isAtomic) {
         String key = UUID.randomUUID().toString();
         clusterClient.set(key, "_").get();
         // use dump to ensure that we have non-string convertible bytes
-        var bytes = clusterClient.dump(gs(key)).get();
+        byte[] bytes = clusterClient.dump(gs(key)).get();
 
-        var batch = new ClusterBatch(isAtomic).withBinaryOutput().set(gs(key), gs(bytes)).get(gs(key));
+        ClusterBatch batch =
+                new ClusterBatch(isAtomic).withBinaryOutput().set(gs(key), gs(bytes)).get(gs(key));
 
-        var responses = clusterClient.exec(batch, true).get();
+        Object[] responses = clusterClient.exec(batch, true).get();
 
         assertDeepEquals(
                 new Object[] {
