@@ -2,7 +2,12 @@
 package glide.standalone;
 
 import static glide.TestConfiguration.SERVER_VERSION;
+import static glide.TestUtilities.BGREWRITEAOF_RESPONSES;
+import static glide.TestUtilities.BGSAVE_NOT_CANCELLED_RESPONSE;
+import static glide.TestUtilities.BGSAVE_RESPONSES;
 import static glide.TestUtilities.assertDeepEquals;
+import static glide.TestUtilities.assertMemoryStatsDbEntry;
+import static glide.TestUtilities.assertMemoryStatsFields;
 import static glide.TestUtilities.checkFunctionListResponse;
 import static glide.TestUtilities.checkFunctionListResponseBinary;
 import static glide.TestUtilities.checkFunctionStatsBinaryResponse;
@@ -13,9 +18,12 @@ import static glide.TestUtilities.createLongRunningLuaScript;
 import static glide.TestUtilities.createLuaLibWithLongRunningFunction;
 import static glide.TestUtilities.generateLuaLibCode;
 import static glide.TestUtilities.generateLuaLibCodeBinary;
+import static glide.TestUtilities.getUnixSeconds;
 import static glide.TestUtilities.getValueFromInfo;
 import static glide.TestUtilities.parseInfoResponseToMap;
+import static glide.TestUtilities.waitFor;
 import static glide.TestUtilities.waitForNotBusy;
+import static glide.TestUtilities.waitForSaveNotInProgress;
 import static glide.api.BaseClient.OK;
 import static glide.api.models.GlideString.gs;
 import static glide.api.models.commands.FlushMode.ASYNC;
@@ -34,31 +42,40 @@ import static glide.api.models.commands.scan.ScanOptions.ObjectType.SET;
 import static glide.api.models.commands.scan.ScanOptions.ObjectType.STRING;
 import static glide.cluster.CommandTests.DEFAULT_INFO_SECTIONS;
 import static glide.cluster.CommandTests.EVERYTHING_INFO_SECTIONS;
+import static glide.utils.Java8Utils.createMap;
+import static glide.utils.Java8Utils.repeat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
-import static org.junit.jupiter.api.Named.named;
 
 import glide.api.GlideClient;
 import glide.api.models.GlideString;
 import glide.api.models.Script;
+import glide.api.models.commands.ClientPauseMode;
+import glide.api.models.commands.FailoverOptions;
 import glide.api.models.commands.FlushMode;
 import glide.api.models.commands.InfoOptions.Section;
+import glide.api.models.commands.MigrateOptions;
 import glide.api.models.commands.ScriptOptions;
 import glide.api.models.commands.ScriptOptionsGlideString;
 import glide.api.models.commands.scan.ScanOptions;
+import glide.api.models.configuration.GlideClientConfiguration;
+import glide.api.models.configuration.NodeAddress;
 import glide.api.models.configuration.ProtocolVersion;
 import glide.api.models.exceptions.RequestException;
+import glide.cluster.ValkeyCluster;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -70,9 +87,14 @@ import java.util.concurrent.ExecutionException;
 import java.util.stream.Stream;
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.ArrayUtils;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.MethodSource;
 
 @Timeout(10) // seconds
@@ -80,20 +102,24 @@ public class CommandTests {
 
     private static final String INITIAL_VALUE = "VALUE";
 
+    private static final List<Arguments> clients = new ArrayList<>();
+
+    @BeforeAll
     @SneakyThrows
-    public static Stream<Arguments> getClients() {
-        return Stream.of(
+    public static void init() {
+        clients.add(
                 Arguments.of(
-                        named(
+                        Named.of(
                                 "RESP2",
                                 GlideClient.createClient(
                                                 commonClientConfig()
                                                         .requestTimeout(7000)
                                                         .protocol(ProtocolVersion.RESP2)
                                                         .build())
-                                        .get())),
+                                        .get())));
+        clients.add(
                 Arguments.of(
-                        named(
+                        Named.of(
                                 "RESP3",
                                 GlideClient.createClient(
                                                 commonClientConfig()
@@ -103,7 +129,30 @@ public class CommandTests {
                                         .get())));
     }
 
-    @ParameterizedTest
+    @AfterAll
+    @SneakyThrows
+    @SuppressWarnings("unchecked")
+    public static void teardown() {
+        for (Arguments client : clients) {
+            ((Named<GlideClient>) client.get()[0]).getPayload().close();
+        }
+    }
+
+    @AfterEach
+    @SneakyThrows
+    @SuppressWarnings("unchecked")
+    public void cleanup() {
+        // Flush all databases to ensure clean state between tests
+        for (Arguments client : clients) {
+            ((Named<GlideClient>) client.get()[0]).getPayload().flushall().get();
+        }
+    }
+
+    public static Stream<Arguments> getClients() {
+        return clients.stream();
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void custom_command_info(GlideClient regularClient) {
@@ -111,7 +160,7 @@ public class CommandTests {
         assertTrue(((String) data).contains("# Stats"));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void custom_command_info_binary(GlideClient regularClient) {
@@ -120,19 +169,19 @@ public class CommandTests {
         assertTrue(data.toString().contains("# Stats"));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void custom_command_del_returns_a_number(GlideClient regularClient) {
         String key = "custom_command_del_returns_a_number";
         regularClient.set(key, INITIAL_VALUE).get();
-        var del = regularClient.customCommand(new String[] {"DEL", key}).get();
+        Object del = regularClient.customCommand(new String[] {"DEL", key}).get();
         assertEquals(1L, del);
-        var data = regularClient.get(key).get();
+        String data = regularClient.get(key).get();
         assertNull(data);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void ping(GlideClient regularClient) {
@@ -140,7 +189,7 @@ public class CommandTests {
         assertEquals("PONG", data);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void ping_with_message(GlideClient regularClient) {
@@ -148,7 +197,7 @@ public class CommandTests {
         assertEquals("H3LL0", data);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void ping_binary_with_message(GlideClient regularClient) {
@@ -156,7 +205,7 @@ public class CommandTests {
         assertEquals(gs("H3LL0"), data);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void info_without_options(GlideClient regularClient) {
@@ -166,7 +215,7 @@ public class CommandTests {
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void info_with_multiple_options(GlideClient regularClient) {
@@ -182,7 +231,7 @@ public class CommandTests {
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void info_with_everything_option(GlideClient regularClient) {
@@ -192,7 +241,7 @@ public class CommandTests {
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void simple_select_test(GlideClient regularClient) {
@@ -209,7 +258,7 @@ public class CommandTests {
         assertEquals(value, regularClient.get(key).get());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void select_test_gives_error(GlideClient regularClient) {
@@ -218,7 +267,7 @@ public class CommandTests {
         assertInstanceOf(RequestException.class, e.getCause());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void move(GlideClient regularClient) {
@@ -249,7 +298,7 @@ public class CommandTests {
         assertInstanceOf(RequestException.class, e.getCause());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void move_binary(GlideClient regularClient) {
@@ -280,34 +329,84 @@ public class CommandTests {
         assertInstanceOf(RequestException.class, e.getCause());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void clientId(GlideClient regularClient) {
-        var id = regularClient.clientId().get();
+        Long id = regularClient.clientId().get();
         assertTrue(id > 0);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void clientGetName(GlideClient regularClient) {
         // TODO replace with the corresponding command once implemented
         regularClient.customCommand(new String[] {"client", "setname", "clientGetName"}).get();
 
-        var name = regularClient.clientGetName().get();
+        String name = regularClient.clientGetName().get();
 
         assertEquals("clientGetName", name);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void clientPauseAll_then_clientUnpause(GlideClient regularClient) {
+        String key = "clientPauseAll_then_clientUnpause_key";
+        assertEquals(OK, regularClient.set(key, "before").get());
+
+        assertEquals(OK, regularClient.clientPause(2000, ClientPauseMode.ALL).get());
+
+        CompletableFuture<String> set = regularClient.set(key, "after");
+        CompletableFuture<String> unpause = regularClient.clientUnpause();
+
+        Thread.sleep(300);
+
+        // Verify that none of the commands completes.
+        assertFalse(set.isDone());
+        assertFalse(unpause.isDone());
+
+        // Verify that all commands complete once pause expires.
+        assertEquals(OK, set.get(5, java.util.concurrent.TimeUnit.SECONDS));
+        assertEquals(OK, unpause.get(5, java.util.concurrent.TimeUnit.SECONDS));
+        assertEquals("after", regularClient.get(key).get());
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void clientPauseWrite_then_clientUnpause(GlideClient regularClient) {
+        String key = "clientPauseWrite_then_clientUnpause_key";
+        assertEquals(OK, regularClient.set(key, "before").get());
+
+        assertEquals(OK, regularClient.clientPause(2000, ClientPauseMode.WRITE).get());
+
+        // Reads are not blocked by PAUSE WRITE.
+        assertEquals("before", regularClient.get(key).get());
+
+        CompletableFuture<String> set = regularClient.set(key, "after");
+
+        Thread.sleep(300);
+
+        // Verify that SET has not completed because server is paused.
+        assertFalse(set.isDone());
+
+        assertEquals(OK, regularClient.clientUnpause().get());
+
+        // Verify that SET completes once pause expires.
+        assertEquals(OK, set.get(5, java.util.concurrent.TimeUnit.SECONDS));
+        assertEquals("after", regularClient.get(key).get());
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void config_reset_stat(GlideClient regularClient) {
         String data = regularClient.info(new Section[] {STATS}).get();
         long value_before = getValueFromInfo(data, "total_net_input_bytes");
 
-        var result = regularClient.configResetStat().get();
+        String result = regularClient.configResetStat().get();
         assertEquals(OK, result);
 
         data = regularClient.info(new Section[] {STATS}).get();
@@ -315,12 +414,12 @@ public class CommandTests {
         assertTrue(value_after < value_before);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void config_rewrite_non_existent_config_file(GlideClient regularClient) {
-        var info = regularClient.info(new Section[] {SERVER}).get();
-        var configFile = parseInfoResponseToMap(info).get("config_file");
+        String info = regularClient.info(new Section[] {SERVER}).get();
+        String configFile = parseInfoResponseToMap(info).get("config_file");
 
         if (configFile.isEmpty()) {
             ExecutionException executionException =
@@ -331,67 +430,70 @@ public class CommandTests {
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void configGet_with_no_args_returns_error(GlideClient regularClient) {
-        var exception =
+        ExecutionException exception =
                 assertThrows(
                         ExecutionException.class, () -> regularClient.configGet(new String[] {}).get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getCause().getMessage().contains("wrong number of arguments"));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void configGet_with_wildcard(GlideClient regularClient) {
-        var data = regularClient.configGet(new String[] {"*file"}).get();
+        Map<String, String> data = regularClient.configGet(new String[] {"*file"}).get();
         assertTrue(data.size() > 5);
         assertTrue(data.containsKey("pidfile"));
         assertTrue(data.containsKey("logfile"));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void configGet_with_multiple_params(GlideClient regularClient) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.0.0"), "This feature added in version 7");
-        var data = regularClient.configGet(new String[] {"pidfile", "logfile"}).get();
+        Map<String, String> data = regularClient.configGet(new String[] {"pidfile", "logfile"}).get();
         assertAll(
                 () -> assertEquals(2, data.size()),
                 () -> assertTrue(data.containsKey("pidfile")),
                 () -> assertTrue(data.containsKey("logfile")));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void configSet_with_unknown_parameter_returns_error(GlideClient regularClient) {
-        var exception =
+        ExecutionException exception =
                 assertThrows(
                         ExecutionException.class,
-                        () -> regularClient.configSet(Map.of("Unknown Option", "Unknown Value")).get());
+                        () ->
+                                regularClient
+                                        .configSet(Collections.singletonMap("Unknown Option", "Unknown Value"))
+                                        .get());
         assertInstanceOf(RequestException.class, exception.getCause());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void configSet_a_parameter(GlideClient regularClient) {
-        var oldValue = regularClient.configGet(new String[] {"maxclients"}).get().get("maxclients");
+        String oldValue = regularClient.configGet(new String[] {"maxclients"}).get().get("maxclients");
 
-        var response = regularClient.configSet(Map.of("maxclients", "42")).get();
+        String response = regularClient.configSet(Collections.singletonMap("maxclients", "42")).get();
         assertEquals(OK, response);
-        var newValue = regularClient.configGet(new String[] {"maxclients"}).get();
+        Map<String, String> newValue = regularClient.configGet(new String[] {"maxclients"}).get();
         assertEquals("42", newValue.get("maxclients"));
 
-        response = regularClient.configSet(Map.of("maxclients", oldValue)).get();
+        response = regularClient.configSet(Collections.singletonMap("maxclients", oldValue)).get();
         assertEquals(OK, response);
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void echo(GlideClient regularClient) {
         String message = "GLIDE";
@@ -403,7 +505,7 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void echo_gs(GlideClient regularClient) {
         byte[] message = {(byte) 0x01, (byte) 0x00, (byte) 0x01, (byte) 0x00, (byte) 0x02};
@@ -411,7 +513,7 @@ public class CommandTests {
         assertEquals(gs(message), response);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void time(GlideClient regularClient) {
@@ -427,20 +529,153 @@ public class CommandTests {
         assertTrue(Long.parseLong(result[1]) < 1000000);
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void lastsave(GlideClient regularClient) {
         long result = regularClient.lastsave().get();
-        var yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
+        Instant yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
         assertTrue(Instant.ofEpochSecond(result).isAfter(yesterday));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void latencyHistory(GlideClient client) {
+        long beforeSpike = getUnixSeconds(client);
+        triggerLatencySpike(client);
+
+        Object[][] history = client.latencyHistory("command").get();
+        assertTrue(history.length > 0);
+
+        for (Object[] entry : history) {
+            assertTrue((Long) entry[0] >= beforeSpike);
+            assertTrue((Long) entry[1] > 0);
+        }
+
+        Object[][] unknown = client.latencyHistory("nonexistent").get();
+        assertEquals(0, unknown.length);
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void latencyLatest(GlideClient client) {
+        long beforeSpike = getUnixSeconds(client);
+        triggerLatencySpike(client);
+
+        Object[][] latest = client.latencyLatest().get();
+        assertTrue(latest.length >= 1);
+
+        // Find the "command" event
+        Object[] commandInfo = null;
+        for (Object[] info : latest) {
+            if ("command".equals(info[0])) {
+                commandInfo = info;
+                break;
+            }
+        }
+        assertNotNull(commandInfo);
+
+        assertTrue((Long) commandInfo[1] >= beforeSpike);
+        assertTrue((Long) commandInfo[2] > 0);
+        assertTrue((Long) commandInfo[3] >= (Long) commandInfo[2]);
+
+        if (SERVER_VERSION.isGreaterThanOrEqualTo("8.1.0")) {
+            assertTrue(commandInfo.length > 4);
+            assertTrue((Long) commandInfo[4] > 0);
+            assertTrue((Long) commandInfo[5] > 0);
+        } else {
+            assertEquals(4, commandInfo.length);
+        }
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void latencyReset(GlideClient client) {
+
+        // Trigger spike then reset all events.
+        triggerLatencySpike(client);
+        assertTrue(client.latencyHistory("command").get().length > 0);
+
+        assertTrue(client.latencyReset().get() > 0);
+        assertEquals(0, client.latencyHistory("command").get().length);
+
+        // Trigger spike then reset "command" event.
+        triggerLatencySpike(client);
+        assertTrue(client.latencyHistory("command").get().length > 0);
+
+        assertTrue(client.latencyReset(new String[] {"command"}).get() > 0);
+        assertEquals(0, client.latencyHistory("command").get().length);
+
+        // Trigger spike then reset unknown event.
+        triggerLatencySpike(client);
+        assertTrue(client.latencyHistory("command").get().length > 0);
+
+        assertEquals(0, client.latencyReset(new String[] {"unknown-event"}).get());
+        assertTrue(client.latencyHistory("command").get().length > 0);
+    }
+
+    /** Triggers a latency spike for the "command" event. */
+    @SneakyThrows
+    private static void triggerLatencySpike(GlideClient client) {
+
+        // Reset any existing latency data first so the spike is recorded against a clean baseline,
+        // then enable the server-side latency monitor, trigger a latency spike for the "command"
+        // event, and finally restore the original threshold.
+        client.latencyReset().get();
+
+        Map<String, String> prev = client.configGet(new String[] {"latency-monitor-threshold"}).get();
+        String prevThreshold = prev.getOrDefault("latency-monitor-threshold", "0");
+
+        client.configSet(Collections.singletonMap("latency-monitor-threshold", "1")).get();
+        client.customCommand(new String[] {"DEBUG", "SLEEP", "0.05"}).get();
+
+        client.configSet(Collections.singletonMap("latency-monitor-threshold", prevThreshold)).get();
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void bgsave(GlideClient client) {
+        waitForSaveNotInProgress(client);
+        assertTrue(BGSAVE_RESPONSES.contains(client.bgsave().get()));
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void bgsaveSchedule(GlideClient client) {
+        waitForSaveNotInProgress(client);
+        assertTrue(BGSAVE_RESPONSES.contains(client.bgsaveSchedule().get()));
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void bgsaveCancel(GlideClient client) {
+        assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("8.1.0"));
+        waitForSaveNotInProgress(client);
+
+        ExecutionException e =
+                assertThrows(ExecutionException.class, () -> client.bgsaveCancel().get());
+        assertTrue(e.getCause().getMessage().contains(BGSAVE_NOT_CANCELLED_RESPONSE));
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void bgrewriteaof(GlideClient client) {
+        waitForSaveNotInProgress(client);
+        assertTrue(BGREWRITEAOF_RESPONSES.contains(client.bgrewriteaof().get()));
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void lolwut_lolwut(GlideClient regularClient) {
-        var response = regularClient.lolwut().get();
+        String response = regularClient.lolwut().get();
         System.out.printf("%nLOLWUT standalone client standard response%n%s%n", response);
         assertTrue(
                 response.contains("ver") && response.contains(SERVER_VERSION.toString()),
@@ -486,7 +721,7 @@ public class CommandTests {
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void dbsize_and_flushdb(GlideClient regularClient) {
@@ -512,7 +747,7 @@ public class CommandTests {
         if (SERVER_VERSION.isGreaterThanOrEqualTo("6.2.0")) {
             assertEquals(OK, regularClient.flushdb(SYNC).get());
         } else {
-            var executionException =
+            ExecutionException executionException =
                     assertThrows(ExecutionException.class, () -> regularClient.flushdb(SYNC).get());
             assertInstanceOf(RequestException.class, executionException.getCause());
             assertEquals(OK, regularClient.flushdb(ASYNC).get());
@@ -526,7 +761,7 @@ public class CommandTests {
         assertEquals(0L, regularClient.dbsize().get());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void objectFreq(GlideClient regularClient) {
@@ -535,22 +770,24 @@ public class CommandTests {
         String oldPolicy =
                 regularClient.configGet(new String[] {maxmemoryPolicy}).get().get(maxmemoryPolicy);
         try {
-            assertEquals(OK, regularClient.configSet(Map.of(maxmemoryPolicy, "allkeys-lfu")).get());
+            assertEquals(
+                    OK,
+                    regularClient.configSet(Collections.singletonMap(maxmemoryPolicy, "allkeys-lfu")).get());
             assertEquals(OK, regularClient.set(key, "").get());
             assertTrue(regularClient.objectFreq(key).get() >= 0L);
         } finally {
-            regularClient.configSet(Map.of(maxmemoryPolicy, oldPolicy)).get();
+            regularClient.configSet(Collections.singletonMap(maxmemoryPolicy, oldPolicy)).get();
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void flushall(GlideClient regularClient) {
         if (SERVER_VERSION.isGreaterThanOrEqualTo("6.2.0")) {
             assertEquals(OK, regularClient.flushall(SYNC).get());
         } else {
-            var executionException =
+            ExecutionException executionException =
                     assertThrows(ExecutionException.class, () -> regularClient.flushall(SYNC).get());
             assertInstanceOf(RequestException.class, executionException.getCause());
             assertEquals(OK, regularClient.flushall(ASYNC).get());
@@ -565,7 +802,7 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void function_commands(GlideClient regularClient) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.0.0"), "This feature added in version 7");
@@ -575,27 +812,28 @@ public class CommandTests {
         String libName = "mylib1c";
         String funcName = "myfunc1c";
         // function $funcName returns first argument
-        String code = generateLuaLibCode(libName, Map.of(funcName, "return args[1]"), true);
+        String code =
+                generateLuaLibCode(libName, Collections.singletonMap(funcName, "return args[1]"), true);
         assertEquals(libName, regularClient.functionLoad(code, false).get());
 
-        var functionResult =
+        Object functionResult =
                 regularClient.fcall(funcName, new String[0], new String[] {"one", "two"}).get();
         assertEquals("one", functionResult);
         functionResult =
                 regularClient.fcallReadOnly(funcName, new String[0], new String[] {"one", "two"}).get();
         assertEquals("one", functionResult);
 
-        var flist = regularClient.functionList(false).get();
-        var expectedDescription =
+        Map<String, Object>[] flist = regularClient.functionList(false).get();
+        Map<String, String> expectedDescription =
                 new HashMap<String, String>() {
                     {
                         put(funcName, null);
                     }
                 };
-        var expectedFlags =
+        Map<String, Set<String>> expectedFlags =
                 new HashMap<String, Set<String>>() {
                     {
-                        put(funcName, Set.of("no-writes"));
+                        put(funcName, Collections.singleton("no-writes"));
                     }
                 };
         checkFunctionListResponse(flist, libName, expectedDescription, expectedFlags, Optional.empty());
@@ -605,7 +843,7 @@ public class CommandTests {
                 flist, libName, expectedDescription, expectedFlags, Optional.of(code));
 
         // re-load library without overwriting
-        var executionException =
+        ExecutionException executionException =
                 assertThrows(ExecutionException.class, () -> regularClient.functionLoad(code, false).get());
         assertInstanceOf(RequestException.class, executionException.getCause());
         assertTrue(
@@ -618,11 +856,12 @@ public class CommandTests {
         // function $newFuncName returns argument array len
         String newCode =
                 generateLuaLibCode(
-                        libName, Map.of(funcName, "return args[1]", newFuncName, "return #args"), true);
+                        libName, createMap(funcName, "return args[1]", newFuncName, "return #args"), true);
         assertEquals(libName, regularClient.functionLoad(newCode, true).get());
 
         // load new lib and delete it - first lib remains loaded
-        String anotherLib = generateLuaLibCode("anotherLib", Map.of("anotherFunc", ""), false);
+        String anotherLib =
+                generateLuaLibCode("anotherLib", Collections.singletonMap("anotherFunc", ""), false);
         assertEquals("anotherLib", regularClient.functionLoad(anotherLib, true).get());
         assertEquals(OK, regularClient.functionDelete("anotherLib").get());
 
@@ -635,7 +874,7 @@ public class CommandTests {
 
         flist = regularClient.functionList(libName, false).get();
         expectedDescription.put(newFuncName, null);
-        expectedFlags.put(newFuncName, Set.of("no-writes"));
+        expectedFlags.put(newFuncName, Collections.singleton("no-writes"));
         checkFunctionListResponse(flist, libName, expectedDescription, expectedFlags, Optional.empty());
 
         flist = regularClient.functionList(libName, true).get();
@@ -653,7 +892,7 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void function_commands_binary(GlideClient regularClient) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.0.0"), "This feature added in version 7");
@@ -664,10 +903,11 @@ public class CommandTests {
         GlideString funcName = gs("myfunc1c");
         // function $funcName returns first argument
         GlideString code =
-                generateLuaLibCodeBinary(libName, Map.of(funcName, gs("return args[1]")), true);
+                generateLuaLibCodeBinary(
+                        libName, Collections.singletonMap(funcName, gs("return args[1]")), true);
         assertEquals(libName, regularClient.functionLoad(code, false).get());
 
-        var functionResult =
+        Object functionResult =
                 regularClient
                         .fcall(funcName, new GlideString[0], new GlideString[] {gs("one"), gs("two")})
                         .get();
@@ -678,17 +918,17 @@ public class CommandTests {
                         .get();
         assertEquals(gs("one"), functionResult);
 
-        var flist = regularClient.functionListBinary(false).get();
-        var expectedDescription =
+        Map<GlideString, Object>[] flist = regularClient.functionListBinary(false).get();
+        Map<GlideString, GlideString> expectedDescription =
                 new HashMap<GlideString, GlideString>() {
                     {
                         put(funcName, null);
                     }
                 };
-        var expectedFlags =
+        Map<GlideString, Set<GlideString>> expectedFlags =
                 new HashMap<GlideString, Set<GlideString>>() {
                     {
-                        put(funcName, Set.of(gs("no-writes")));
+                        put(funcName, Collections.singleton(gs("no-writes")));
                     }
                 };
         checkFunctionListResponseBinary(
@@ -699,7 +939,7 @@ public class CommandTests {
                 flist, libName, expectedDescription, expectedFlags, Optional.of(code));
 
         // re-load library without overwriting
-        var executionException =
+        ExecutionException executionException =
                 assertThrows(ExecutionException.class, () -> regularClient.functionLoad(code, false).get());
         assertInstanceOf(RequestException.class, executionException.getCause());
         assertTrue(
@@ -712,12 +952,15 @@ public class CommandTests {
         // function $newFuncName returns argument array len
         GlideString newCode =
                 generateLuaLibCodeBinary(
-                        libName, Map.of(funcName, gs("return args[1]"), newFuncName, gs("return #args")), true);
+                        libName,
+                        createMap(funcName, gs("return args[1]"), newFuncName, gs("return #args")),
+                        true);
         assertEquals(libName, regularClient.functionLoad(newCode, true).get());
 
         // load new lib and delete it - first lib remains loaded
         GlideString anotherLib =
-                generateLuaLibCodeBinary(gs("anotherLib"), Map.of(gs("anotherFunc"), gs("")), false);
+                generateLuaLibCodeBinary(
+                        gs("anotherLib"), Collections.singletonMap(gs("anotherFunc"), gs("")), false);
         assertEquals(gs("anotherLib"), regularClient.functionLoad(anotherLib, true).get());
         assertEquals(OK, regularClient.functionDelete(gs("anotherLib")).get());
 
@@ -730,7 +973,7 @@ public class CommandTests {
 
         flist = regularClient.functionListBinary(libName, false).get();
         expectedDescription.put(newFuncName, null);
-        expectedFlags.put(newFuncName, Set.of(gs("no-writes")));
+        expectedFlags.put(newFuncName, Collections.singleton(gs("no-writes")));
         checkFunctionListResponseBinary(
                 flist, libName, expectedDescription, expectedFlags, Optional.empty());
 
@@ -753,7 +996,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(ASYNC).get());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void copy(GlideClient regularClient) {
@@ -804,7 +1047,7 @@ public class CommandTests {
     }
 
     @Timeout(20)
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void functionKill_no_write(GlideClient regularClient) {
@@ -817,7 +1060,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -825,7 +1068,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -855,7 +1098,7 @@ public class CommandTests {
     }
 
     @Timeout(20)
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void functionKillBinary_no_write(GlideClient regularClient) {
@@ -869,7 +1112,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -877,7 +1120,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -907,7 +1150,7 @@ public class CommandTests {
     }
 
     @Timeout(20)
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void functionKill_write_function(GlideClient regularClient) {
@@ -923,7 +1166,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -931,7 +1174,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -973,7 +1216,7 @@ public class CommandTests {
     }
 
     @Timeout(20)
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void functionKillBinary_write_function(GlideClient regularClient) {
@@ -990,7 +1233,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -998,7 +1241,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -1039,7 +1282,7 @@ public class CommandTests {
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void functionStats(GlideClient regularClient) {
@@ -1050,35 +1293,36 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // function $funcName returns first argument
-        String code = generateLuaLibCode(libName, Map.of(funcName, "return args[1]"), false);
+        String code =
+                generateLuaLibCode(libName, Collections.singletonMap(funcName, "return args[1]"), false);
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        var response = regularClient.functionStats().get();
-        for (var nodeResponse : response.values()) {
+        Map<String, Map<String, Map<String, Object>>> response = regularClient.functionStats().get();
+        for (Map<String, Map<String, Object>> nodeResponse : response.values()) {
             checkFunctionStatsResponse(nodeResponse, new String[0], 1, 1);
         }
 
         code =
                 generateLuaLibCode(
                         libName + "_2",
-                        Map.of(funcName + "_2", "return 'OK'", funcName + "_3", "return 42"),
+                        createMap(funcName + "_2", "return 'OK'", funcName + "_3", "return 42"),
                         false);
         assertEquals(libName + "_2", regularClient.functionLoad(code, true).get());
 
         response = regularClient.functionStats().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<String, Map<String, Object>> nodeResponse : response.values()) {
             checkFunctionStatsResponse(nodeResponse, new String[0], 2, 3);
         }
 
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         response = regularClient.functionStats().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<String, Map<String, Object>> nodeResponse : response.values()) {
             checkFunctionStatsResponse(nodeResponse, new String[0], 0, 0);
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void functionStatsBinary(GlideClient regularClient) {
@@ -1090,18 +1334,20 @@ public class CommandTests {
 
         // function $funcName returns first argument
         GlideString code =
-                generateLuaLibCodeBinary(libName, Map.of(funcName, gs("return args[1]")), false);
+                generateLuaLibCodeBinary(
+                        libName, Collections.singletonMap(funcName, gs("return args[1]")), false);
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        var response = regularClient.functionStatsBinary().get();
-        for (var nodeResponse : response.values()) {
+        Map<String, Map<GlideString, Map<GlideString, Object>>> response =
+                regularClient.functionStatsBinary().get();
+        for (Map<GlideString, Map<GlideString, Object>> nodeResponse : response.values()) {
             checkFunctionStatsBinaryResponse(nodeResponse, new GlideString[0], 1, 1);
         }
 
         code =
                 generateLuaLibCodeBinary(
                         gs(libName.toString() + "_2"),
-                        Map.of(
+                        createMap(
                                 gs(funcName.toString() + "_2"),
                                 gs("return 'OK'"),
                                 gs(funcName.toString() + "_3"),
@@ -1110,19 +1356,19 @@ public class CommandTests {
         assertEquals(gs(libName.toString() + "_2"), regularClient.functionLoad(code, true).get());
 
         response = regularClient.functionStatsBinary().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<GlideString, Map<GlideString, Object>> nodeResponse : response.values()) {
             checkFunctionStatsBinaryResponse(nodeResponse, new GlideString[0], 2, 3);
         }
 
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         response = regularClient.functionStatsBinary().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<GlideString, Map<GlideString, Object>> nodeResponse : response.values()) {
             checkFunctionStatsBinaryResponse(nodeResponse, new GlideString[0], 0, 0);
         }
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void function_dump_and_restore(GlideClient regularClient) {
@@ -1140,14 +1386,14 @@ public class CommandTests {
         // function $name1 returns first argument
         // function $name2 returns argument array len
         String code =
-                generateLuaLibCode(name1, Map.of(name1, "return args[1]", name2, "return #args"), false);
+                generateLuaLibCode(name1, createMap(name1, "return args[1]", name2, "return #args"), false);
         assertEquals(name1, regularClient.functionLoad(code, true).get());
-        var flist = regularClient.functionList(true).get();
+        Map<String, Object>[] flist = regularClient.functionList(true).get();
 
         final byte[] dump = regularClient.functionDump().get();
 
         // restore without cleaning the lib and/or overwrite option causes an error
-        var executionException =
+        ExecutionException executionException =
                 assertThrows(ExecutionException.class, () -> regularClient.functionRestore(dump).get());
         assertInstanceOf(RequestException.class, executionException.getCause());
         assertTrue(executionException.getMessage().contains("Library " + name1 + " already exists"));
@@ -1166,7 +1412,8 @@ public class CommandTests {
 
         // create lib with another name, but with the same function names
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
-        code = generateLuaLibCode(name2, Map.of(name1, "return args[1]", name2, "return #args"), false);
+        code =
+                generateLuaLibCode(name2, createMap(name1, "return args[1]", name2, "return #args"), false);
         assertEquals(name2, regularClient.functionLoad(code, true).get());
 
         // REPLACE policy now fails due to a name collision
@@ -1191,7 +1438,7 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void randomkey(GlideClient regularClient) {
         String key1 = "{key}" + UUID.randomUUID();
@@ -1209,7 +1456,7 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void randomKeyBinary(GlideClient regularClient) {
         GlideString key1 = gs("{key}" + UUID.randomUUID());
@@ -1226,7 +1473,7 @@ public class CommandTests {
         assertNull(regularClient.randomKeyBinary().get());
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void scan(GlideClient regularClient) {
@@ -1251,8 +1498,7 @@ public class CommandTests {
 
         // Negative cursor
         if (SERVER_VERSION.isGreaterThanOrEqualTo("8.0.0")) {
-            ExecutionException executionException =
-                    assertThrows(ExecutionException.class, () -> regularClient.scan("-1").get());
+            assertThrows(ExecutionException.class, () -> regularClient.scan("-1").get());
         } else {
             Object[] negativeResult = regularClient.scan("-1").get();
             assertEquals(initialCursor, negativeResult[resultCursorIndex]);
@@ -1285,7 +1531,7 @@ public class CommandTests {
         keys.forEach((key, value) -> assertTrue(ArrayUtils.contains(finalKeysFound, key)));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void scan_binary(GlideClient regularClient) {
@@ -1311,8 +1557,7 @@ public class CommandTests {
 
         // Negative cursor
         if (SERVER_VERSION.isGreaterThanOrEqualTo("8.0.0")) {
-            ExecutionException executionException =
-                    assertThrows(ExecutionException.class, () -> regularClient.scan(gs("-1")).get());
+            assertThrows(ExecutionException.class, () -> regularClient.scan(gs("-1")).get());
         } else {
             Object[] negativeResult = regularClient.scan(gs("-1")).get();
             assertEquals(initialCursor, negativeResult[resultCursorIndex]);
@@ -1345,7 +1590,7 @@ public class CommandTests {
         keys.forEach((key, value) -> assertTrue(ArrayUtils.contains(finalKeysFound, key)));
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void scan_with_options(GlideClient regularClient) {
@@ -1375,15 +1620,12 @@ public class CommandTests {
         // Empty return - match a random UUID
         ScanOptions options = ScanOptions.builder().matchPattern("*" + UUID.randomUUID()).build();
         Object[] emptyResult = regularClient.scan(initialCursor, options).get();
-        assertNotEquals(initialCursor, emptyResult[resultCursorIndex]);
         assertDeepEquals(new String[] {}, emptyResult[resultCollectionIndex]);
 
         // Negative cursor
         if (SERVER_VERSION.isGreaterThanOrEqualTo("8.0.0")) {
             final ScanOptions finalOptions = options;
-            ExecutionException executionException =
-                    assertThrows(
-                            ExecutionException.class, () -> regularClient.scan("-1", finalOptions).get());
+            assertThrows(ExecutionException.class, () -> regularClient.scan("-1", finalOptions).get());
         } else {
             Object[] negativeResult = regularClient.scan("-1", options).get();
             assertEquals(initialCursor, negativeResult[resultCursorIndex]);
@@ -1434,7 +1676,7 @@ public class CommandTests {
         } while (!hashCursor.equals("0")); // 0 is returned for the cursor of the last iteration.
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void scan_binary_with_options(GlideClient regularClient) {
@@ -1465,15 +1707,13 @@ public class CommandTests {
         // Empty return - match a random UUID
         ScanOptions options = ScanOptions.builder().matchPattern("*" + UUID.randomUUID()).build();
         Object[] emptyResult = regularClient.scan(initialCursor, options).get();
-        assertNotEquals(initialCursor, emptyResult[resultCursorIndex]);
         assertDeepEquals(new String[] {}, emptyResult[resultCollectionIndex]);
 
         // Negative cursor
         if (SERVER_VERSION.isGreaterThanOrEqualTo("8.0.0")) {
             final ScanOptions finalOptions = options;
-            ExecutionException executionException =
-                    assertThrows(
-                            ExecutionException.class, () -> regularClient.scan(gs("-1"), finalOptions).get());
+            assertThrows(
+                    ExecutionException.class, () -> regularClient.scan(gs("-1"), finalOptions).get());
         } else {
             Object[] negativeResult = regularClient.scan(gs("-1"), options).get();
             assertEquals(initialCursor, negativeResult[resultCursorIndex]);
@@ -1525,7 +1765,7 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void invokeScript_test(GlideClient regularClient) {
         String key1 = UUID.randomUUID().toString();
@@ -1565,11 +1805,11 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void script_large_keys_and_or_args(GlideClient regularClient) {
-        String str1 = "0".repeat(1 << 12); // 4k
-        String str2 = "0".repeat(1 << 12); // 4k
+        String str1 = repeat("0", 1 << 12); // 4k
+        String str2 = repeat("0", 1 << 12); // 4k
 
         try (Script script = new Script("return KEYS[1]", false)) {
             // 1 very big key
@@ -1609,7 +1849,7 @@ public class CommandTests {
     }
 
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void invokeScript_gs_test(GlideClient regularClient) {
         GlideString key1 = gs(UUID.randomUUID().toString());
@@ -1664,7 +1904,7 @@ public class CommandTests {
         // Get the SHA1 digests of the scripts
         String sha1_1 = script1.getHash();
         String sha1_2 = script2.getHash();
-        String nonExistentSha1 = "0".repeat(40); // A SHA1 that doesn't exist
+        String nonExistentSha1 = repeat("0", 40); // A SHA1 that doesn't exist
 
         // Check existence of scripts
         Boolean[] result =
@@ -1674,7 +1914,7 @@ public class CommandTests {
         script2.close();
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void scriptExistsBinary(GlideClient regularClient) {
@@ -1688,7 +1928,7 @@ public class CommandTests {
         // Get the SHA1 digests of the scripts
         GlideString sha1_1 = gs(script1.getHash());
         GlideString sha1_2 = gs(script2.getHash());
-        GlideString nonExistentSha1 = gs("0".repeat(40)); // A SHA1 that doesn't exist
+        GlideString nonExistentSha1 = gs(repeat("0", 40)); // A SHA1 that doesn't exist
 
         // Check existence of scripts
         Boolean[] result =
@@ -1698,7 +1938,7 @@ public class CommandTests {
         script2.close();
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void scriptFlush(GlideClient regularClient) {
@@ -1726,7 +1966,7 @@ public class CommandTests {
         script.close();
     }
 
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void scriptKill(GlideClient regularClient) {
@@ -1744,7 +1984,7 @@ public class CommandTests {
         // create and load a long-running script
         Script script = new Script(createLongRunningLuaScript(6, true), true);
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 testClient.invokeScript(script);
@@ -1837,7 +2077,7 @@ public class CommandTests {
 
     @Timeout(20)
     @SneakyThrows
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     public void scriptKill_unkillable(GlideClient regularClient) {
         // Ensure no script is blocking the server from a previous test
@@ -1850,7 +2090,7 @@ public class CommandTests {
         CompletableFuture<Object> promise = new CompletableFuture<>();
         promise.complete(null);
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // run the script without await
@@ -1930,7 +2170,7 @@ public class CommandTests {
      * instance with the same hash still exists, even after the original reference is dropped and the
      * server cache is flushed.
      */
-    @ParameterizedTest
+    @ParameterizedTest(autoCloseArguments = false)
     @MethodSource("getClients")
     @SneakyThrows
     public void test_script_is_not_removed_while_another_instance_exists(GlideClient regularClient) {
@@ -1970,5 +2210,203 @@ public class CommandTests {
         assertTrue(
                 exception.getMessage().toUpperCase().contains("NOSCRIPT"),
                 "Expected NOSCRIPT error after script is fully released and flushed");
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void failover_no_replicas(GlideClient regularClient) {
+        // FAILOVER without replicas should fail with an error
+        ExecutionException ex =
+                assertThrows(ExecutionException.class, () -> regularClient.failover().get());
+
+        Throwable cause = ex.getCause();
+        assertInstanceOf(RequestException.class, cause);
+
+        // Error message differs between Redis ("no replica") and Valkey ("FAILOVER requires").
+        String msg = cause.getMessage();
+        assertTrue(
+                msg.contains("no replica") || msg.contains("FAILOVER requires"),
+                "Expected error about no replicas, got: " + msg);
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void failover_abort_no_failover_in_progress(GlideClient regularClient) {
+        // FAILOVER ABORT when no failover is in progress should fail
+        ExecutionException ex =
+                assertThrows(
+                        ExecutionException.class, () -> regularClient.failover(FailoverOptions.abort()).get());
+
+        Throwable cause = ex.getCause();
+        assertInstanceOf(RequestException.class, cause);
+
+        // Error message differs between Redis ("No failover") and Valkey ("nothing to abort")
+        String msg = cause.getMessage();
+        assertTrue(
+                msg.contains("No failover") || msg.contains("nothing to abort"),
+                "Expected error about no failover in progress, got: " + msg);
+    }
+
+    @ParameterizedTest
+    @EnumSource(ProtocolVersion.class)
+    @SneakyThrows
+    @Timeout(120)
+    public void failover_to_replica(ProtocolVersion protocol) {
+        // Spin up a standalone primary with 1 replica
+        try (ValkeyCluster standalone = new ValkeyCluster(false, false, 1, 1, null, null)) {
+            NodeAddress primaryAddr = standalone.getNodesAddr().get(0);
+            GlideClientConfiguration config =
+                    GlideClientConfiguration.builder().address(primaryAddr).protocol(protocol).build();
+            try (GlideClient client = GlideClient.createClient(config).get()) {
+                // Verify initial role is master
+                waitForRole(client, "master");
+
+                // FAILOVER with a timeout should succeed (returns OK immediately)
+                String result = client.failover().get();
+                assertEquals(OK, result);
+
+                waitForRole(client, "slave");
+            }
+        }
+    }
+
+    @ParameterizedTest
+    @EnumSource(ProtocolVersion.class)
+    @SneakyThrows
+    @Timeout(120)
+    public void replicaof_and_replicaofNoOne(ProtocolVersion protocol) {
+        // Spin up two standalone servers: one as the primary, one to make a replica
+        try (ValkeyCluster primary = new ValkeyCluster(false, false, 1, 0, null, null);
+                ValkeyCluster secondary = new ValkeyCluster(false, false, 1, 0, null, null)) {
+            NodeAddress primaryAddr = primary.getNodesAddr().get(0);
+            NodeAddress secondaryAddr = secondary.getNodesAddr().get(0);
+            GlideClientConfiguration config =
+                    GlideClientConfiguration.builder().address(secondaryAddr).protocol(protocol).build();
+            try (GlideClient client = GlideClient.createClient(config).get()) {
+                // Verify initial role is master
+                waitForRole(client, "master");
+
+                // Make it a replica of the primary
+                assertEquals(OK, client.replicaof(primaryAddr.getHost(), primaryAddr.getPort()).get());
+
+                // Verify role changed to slave
+                waitForRole(client, "slave");
+
+                // Promote back to primary
+                assertEquals(OK, client.replicaofNoOne().get());
+
+                // Verify role changed back to master
+                waitForRole(client, "master");
+            }
+        }
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void migrate_multi_keys_invalid_host(GlideClient regularClient) {
+        String key1 = "{migrate}" + UUID.randomUUID();
+        String key2 = "{migrate}" + UUID.randomUUID();
+        regularClient.set(key1, "value1").get();
+        regularClient.set(key2, "value2").get();
+        try {
+            ExecutionException executionException =
+                    assertThrows(
+                            ExecutionException.class,
+                            () ->
+                                    regularClient
+                                            .migrate("nonexistent.host", 6379, new String[] {key1, key2}, 0, 5000)
+                                            .get());
+            assertInstanceOf(RequestException.class, executionException.getCause());
+            assertTrue(
+                    executionException.getCause().getMessage().contains("Connection refused")
+                            || executionException.getCause().getMessage().contains("Name or service not known")
+                            || executionException
+                                    .getCause()
+                                    .getMessage()
+                                    .contains("nodename nor servname provided")
+                            || executionException.getCause().getMessage().contains("Temporary failure")
+                            || executionException.getCause().getMessage().contains("IOERR"));
+        } finally {
+            regularClient.del(new String[] {key1, key2}).get();
+        }
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    @Timeout(120)
+    public void migrate_multi_keys_with_options_to_secondary(GlideClient regularClient) {
+        try (ValkeyCluster secondary = new ValkeyCluster(false, false, 1, 0, null, null)) {
+            NodeAddress dest = secondary.getNodesAddr().get(0);
+            String key1 = "{migrate}" + UUID.randomUUID();
+            String key2 = "{migrate}" + UUID.randomUUID();
+            try {
+                regularClient.set(key1, "value1").get();
+                regularClient.set(key2, "value2").get();
+                assertEquals(
+                        OK,
+                        regularClient
+                                .migrate(
+                                        dest.getHost(),
+                                        dest.getPort(),
+                                        new String[] {key1, key2},
+                                        0,
+                                        5000,
+                                        MigrateOptions.builder().replace(true).build())
+                                .get());
+                assertEquals(0L, regularClient.exists(new String[] {key1, key2}).get());
+            } finally {
+                regularClient.del(new String[] {key1, key2}).get();
+            }
+        }
+    }
+
+    private static boolean waitForRole(GlideClient client, String role) throws Exception {
+        waitFor(
+                () -> client.info(new Section[] {Section.REPLICATION}).get().contains("role:" + role),
+                "Timed out waiting for role change to " + role + " to complete.");
+        return true;
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void memoryDoctor(GlideClient client) {
+        String result = client.memoryDoctor().get();
+        assertNotNull(result);
+        assertFalse(result.isEmpty());
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void memoryMallocStats(GlideClient client) {
+        String result = client.memoryMallocStats().get();
+        assertNotNull(result);
+        assertFalse(result.isEmpty());
+    }
+
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void memoryPurge(GlideClient client) {
+        String result = client.memoryPurge().get();
+        assertEquals(OK, result);
+    }
+
+    @SuppressWarnings("unchecked")
+    @ParameterizedTest(autoCloseArguments = false)
+    @MethodSource("getClients")
+    @SneakyThrows
+    public void memoryStats(GlideClient client) {
+        // Write a key to ensure at least one db entry exists
+        client.set("memoryStats_test_key", "value").get();
+
+        Map<String, Object> stats = client.memoryStats().get();
+        assertMemoryStatsFields(stats);
+        assertMemoryStatsDbEntry((Map<String, Object>) stats.get("db.0"));
     }
 }
